<resources>
    <string name="app_name">Football League</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="league_badge">League Badge</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="team_badge">Team Badge</string>
    <string name="empty_score">- : -</string>
    <string name="empty_value">-</string>
    <string name="score">Score</string>
    <string name="shots">Shots</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="search">Search</string>
    <string name="no_match">There is no match available</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="league">League</string>
    <string name="favorite">Favorite</string>
</resources>
