<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.match.MatchDetailActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivHome"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_broken_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/team_badge" />

                <ImageView
                    android:id="@+id/ivAway"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_broken_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/team_badge"/>

                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_score"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivHome"
                    app:layout_constraintEnd_toStartOf="@+id/ivAway"
                    app:layout_constraintStart_toEndOf="@+id/ivHome"
                    app:layout_constraintTop_toTopOf="@+id/ivHome" />

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/ivHome"
                    app:layout_constraintStart_toStartOf="@+id/ivHome"
                    app:layout_constraintTop_toBottomOf="@+id/ivHome" />

                <TextView
                    android:id="@+id/tvAway"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/ivAway"
                    app:layout_constraintStart_toStartOf="@+id/ivAway"
                    app:layout_constraintTop_toBottomOf="@+id/ivAway" />

                <TextView
                    android:id="@+id/tvFt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvScore"
                    app:layout_constraintStart_toStartOf="@+id/tvScore"
                    app:layout_constraintTop_toBottomOf="@+id/tvScore"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp">

        <TableRow android:weightSum="3" android:layout_marginBottom="8dp">
            <TextView android:id="@+id/tvHomeScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/empty_value"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
            <TextView android:id="@+id/tvAwayScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/empty_value"
                android:gravity="end" />
        </TableRow>

        <TableRow android:weightSum="3" android:layout_marginBottom="8dp">
            <TextView android:id="@+id/tvHomeShot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/empty_value"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shots"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
            <TextView android:id="@+id/tvAwayShot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/empty_value"
                android:gravity="end" />
        </TableRow>

        <TableRow android:weightSum="3" android:layout_marginBottom="8dp">
            <TextView android:id="@+id/tvHomeYellowCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/empty_value"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yellow_card"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
            <TextView android:id="@+id/tvAwayYellowCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/empty_value"
                android:gravity="end" />
        </TableRow>

        <TableRow android:weightSum="3" android:layout_marginBottom="8dp">
            <TextView android:id="@+id/tvHomeRedCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/empty_value"/>
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/red_card"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
            <TextView android:id="@+id/tvAwayRedCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/empty_value"
                android:gravity="end" />
        </TableRow>

    </TableLayout>

</LinearLayout>